--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,16 @@ for (let i = 1; i <= 8; i++) {
     <h1><span class="text-gradient">Basaran Pansiyon</span></h1>
     <ul class="instructions">
       <li>
-        <strong> 📌 Location: Amasra 'add map..'</strong>
+        <strong> 📌 Location: Kaleiçi Mah, Kemer Sok., Amasra / Bartın </strong>
       </li>
       <li>
-        <strong> 📞 Contact: 'no..'</strong>
+        <strong> 📞 Contact: +90 533 435 0717 </strong>
+      </li>
+      <li>
+        <strong> 🏖️ AirBnB: <a>  </a> </strong>
+      </li>
+      <li>
+        <strong> ✍🏼 Sahibinden: <a>  </a> </strong>
       </li>
     </ul>
 
